--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ repository = "https://github.com/tehAnswer/ttoj"
 readme = "README.md"
 
 [dependencies]
+redis = "0.10.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+chrono = { version= "0.4", features = ["serde"] }
+uuid = { version = "0.7", features = ["serde", "v4"] }
